--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -4,6 +4,7 @@
   "description": "A simple micro authentication service in Node.js using Express",
   "main": "app.js",
   "scripts": {
+    "dev": "node --watch app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
